# computer-system-architecture

./: CMakeLists.txt  run_all_tests.sh
hw1/: README.md
hw1/code/: CMakeLists.txt  complex.cpp  complex.h  container.cpp  container.h  fraction.cpp  fraction.h  main.cpp  number.cpp  number.h  polar.cpp  polar.h  rnd.h
hw1/demo/: triangle.h
hw1/tests/: README.md  input3.txt  input4.txt  output1_1.txt  output1_2.txt  output2_1.txt  output2_2.txt  output3_1.txt  output3_2.txt  output4_1.txt  output4_2.txt  output5_1.txt  output5_2.txt  output_random1_1.txt  output_random1_2.txt  output_random2_1.txt  output_random2_2.txt
hw2/: README.md  Test Results.txt  run_all_tests_task2.sh
hw2/code/: CMakeLists.txt  complex.cpp  complex.h  container.cpp  container.h  fraction.cpp  fraction.h  main.cpp  number.cpp  number.h  polar.cpp  polar.h  rnd.h
hw2/tests/: input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  out1-1.txt  out1-2.txt  out2-1.txt  out2-2.txt  out3-1.txt  out3-2.txt  out4-1.txt  out4-2.txt  out5-1.txt  out5-2.txt  outrnd1-2.txt  outrnd2-2.txt
hw3/: complex.py  container.py  fraction.py  input.py  main.py  number.py  polar.py
hw3/docs/: Записка.md
hw3/tests/: input2.txt  input5.txt  out1_1.txt  out1_2.txt  out2_1.txt  out2_2.txt  out3_1.txt  out3_2.txt  out4_1.txt  out4_2.txt  out5_1.txt  out5_2.txt  outrnd1_1.txt  outrnd1_2.txt  outrnd2_1.txt  outrnd2_2.txt
hw4/: README.md  input.c  inrnd.c  main.c  makefile  output.c  run_all_tests.sh  task_functions.asm
hw5/: CMakeLists.txt  README.md  hotel.h  main.cpp  person.cpp  person.h  rnd.h
(+20 files in other folders)
